<resources>
    <string name="app_name">RockPaperBySeraph0</string>
    <string name="action_settings">Settings</string>
    <string name="start_message">버튼을 선택하세요!!!</string>
    <string name="desc_gawi">GaWi</string>
    <string name="desc_bawi">BaWi</string>
    <string name="desc_bo">Bo</string>
    <string name="desc_computer">Computer</string>
    <string name="desc_you">You</string>
</resources>
