<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.hyg.rockpaperbyseraph0.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/txtMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_marginTop="10dp"
        android:text="@string/start_message" />

    <ImageButton
        android:id="@+id/btnRock0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnRock1"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btnRock1"
        android:layout_marginEnd="66dp"
        android:layout_toStartOf="@+id/btnRock1"
        android:contentDescription="@string/desc_gawi"
        android:tag="0"
        app:srcCompat="@drawable/img_1" />

    <ImageButton
        android:id="@+id/btnRock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtMsg"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/txtMsg"
        android:layout_centerInParent="false"
        android:layout_marginBottom="150dp"
        android:layout_marginTop="29dp"
        android:contentDescription="@string/desc_bawi"
        android:tag="1"
        app:srcCompat="@drawable/img_2" />

    <ImageButton
        android:id="@+id/btnRock2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnRock1"
        android:layout_alignTop="@+id/btnRock1"
        android:layout_marginStart="80dp"
        android:layout_toEndOf="@+id/txtMsg"
        android:contentDescription="@string/desc_bo"
        android:tag="2"
        app:srcCompat="@drawable/img_3" />

    <TextView
        android:id="@+id/txtYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnRock0"
        android:layout_below="@+id/btnRock0"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="43dp"
        />

    <TextView
        android:id="@+id/txtComputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtYou"
        android:layout_alignBottom="@+id/txtYou"
        android:layout_alignStart="@+id/btnRock2"
        android:layout_marginStart="12dp"
        />

    <ImageView
        android:id="@+id/imgComputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imgYou"
        android:layout_marginEnd="12dp"
        android:layout_toStartOf="@+id/txtComputer"
        android:contentDescription="@string/desc_computer"
        android:scaleX=".5"
        android:scaleY=".5"
        app:srcCompat="@drawable/question" />

    <ImageView
        android:id="@+id/imgYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:layout_toStartOf="@+id/txtResult"
        android:contentDescription="@string/desc_you"
        android:scaleX=".5"
        android:scaleY=".5"
        app:srcCompat="@drawable/question" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgComputer"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
